fixed issue of tab view pet section alignment

--- a/assets/style.css
+++ b/assets/style.css
@@ -576,7 +576,7 @@ footer{
 }
 
 #pet_heading{
-  font-size: 34px;
+  font-size: 31px;
   line-height: 1.3;
   padding-top: 0px;
   display: flex;
@@ -584,8 +584,10 @@ footer{
   text-align: left;
   margin-bottom: 15px;
   padding-right: 0px;
-  margin-left: 0px;
-  padding-inline-start: 0px;
+  font-size-adjust:0.48;
+  margin-left: -30px;
+  padding-left: 0px;
+  font-family: sans-serif;
 }
 
 #pet_content{
@@ -823,6 +825,8 @@ footer{
 
 #pet_heading{
   font-size: 44px;
+  font-size-adjust: 0.5;
+  margin-left: 0px;
 }
 
 #pet_content{
@@ -982,7 +986,9 @@ footer{
 #pet_heading{
   padding-top: 25px;
   font-size: 50px;
-  padding-left: 5px;
+  padding-left: 0px;
+  font-size-adjust: 0.5;
+  margin-left: -3px;
 }
 
 #pet_content{
